# practice

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/routes/: files.py  img_processing.py
backend/app/core/: logging.py
backend/app/middleware/: logging_middleware.py
backend/app/services/aws/: s3_service.py  sqs_service.py
backend/app/services/image/: bg_removal.py
backend/app/services/redis/: redis_service.py
docker/: docker-compose.yaml
frontend/: next.config.mjs  package-lock.json  package.json  style.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
functions/hello-world/: handler.py  requirements.txt
functions/s3-processor/: handler.py
functions/sqs-consumer/: handler.py  requirements.txt
infrastructure/terraform/environments/dev/: main.tf  outputs.tf
infrastructure/terraform/environments/prod/: main.tf
infrastructure/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
monitoring/alerts/: alertmanager.yml  rules.yml
monitoring/grafana/dashboards/: dashboards.yml  overview.json
monitoring/grafana/datasources/: datasources.yml
monitoring/loki/: loki-config.yaml  promtail-config.yaml
monitoring/prometheus/: prometheus.yml
monitoring/tempo/: tempo-config.yaml
tests/: conftest.py  test_hello_world.py  test_s3_processor.py  test_sqs_consumer.py
worker/: Dockerfile  pyproject.toml
worker/src/: main.py
