[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "rembg[cpu]>=2.0.75",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "opentelemetry-distro>=0.51b0",
    "prometheus-client>=0.21.0",
    "starlette-exporter>=0.16.0",
    "python-json-logger>=2.0.0",
]
