[project]
name = "photo-bg-remover-worker"
version = "0.1.0"
description = "Standalone SQS Worker for Background Removal"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "redis>=7.4.0",
    "rembg[cpu]>=2.0.75",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "prometheus-client>=0.21.0",
    "python-json-logger>=2.0.0",
]
